--- a/Lecture_01/lecture_note/note_01.tex
+++ b/Lecture_01/lecture_note/note_01.tex
@@ -170,12 +170,56 @@
 
 % The table of contents outputs the sections and subsections that appear in your presentation, specified with the standard \section and \subsection commands. You may either display all sections and subsections on one slide with \tableofcontents, or display each section at a time on subsequent slides with \tableofcontents[pausesections]. The latter is useful if you want to step through each section and mention what you will discuss.
 
+% Slide 1
+\subsection{Blocks}
+
 \begin{frame}
-	\frametitle{Presentation Overview} % Slide title, remove this command for no title
+	\frametitle{Agro-Informatics}
 	
-	\tableofcontents % Output the table of contents (all sections on one slide)
-	%\tableofcontents[pausesections] % Output the table of contents (break sections up across separate slides)
+	\begin{block}{Food and Agriculture Organization (FAO)}
+		Agro-informatics connects information technology with the farm management, analysis and application of agricultural data to design more accurate and targeted agricultural interventions.
+	\end{block}
+	
+	\begin{exampleblock}{Examples of The Use of New Technology in Agriculture}
+		 satellite imagery \\ 
+		 remote sensing \\ 
+		 geographic information systems \\ 
+	\end{exampleblock}
+	
+	\begin{block}{} % Block without title
+		Technology enables the transformation of data into actionable information.
+	\end{block}
 \end{frame}
+
+% Slide 2
+\begin{frame}
+	\frametitle{Benefits of Agro-Informatics}
+	\begin{itemize}
+		\item Enhanced Decision Making: With real-time data on soil health, weather patterns, and crop growth, farmers can make informed decisions that maximize their yield.
+		\item Resource Optimization: Agriculture informatics helps optimize the use of resources such as water, fertilizers, and pesticides, reducing waste and environmental impact.
+		\item Precision Agriculture: Through GPS and remote sensing technologies, farmers can precisely target their interventions, minimizing costs and environmental harm.
+	\end{itemize}
+\end{frame}
+
+% Slide 3
+\begin{frame}
+	\frametitle{Benefits of Agro-Informatics}
+	\begin{itemize}
+		\item Early Disease Detection: Monitoring tools and data analysis enable the early detection of disease outbreaks, preventing their spread and minimizing losses.
+		\item Supply Chain Efficiency: Informatics streamlines the supply chain, reducing post-harvest losses and ensuring fresher produce reaches consumers.
+	\end{itemize}
+\end{frame}
+
+% Slide 4
+\begin{frame}
+	\frametitle{Example of Agro-Informatics}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{creodocs_logo.pdf}
+		\caption{Creodocs logo.}
+	\end{figure}
+\end{frame}
+
+
 
 %----------------------------------------------------------------------------------------
 %	PRESENTATION BODY SLIDES
