--- a/Lecture_01/lecture_note/note_01.tex
+++ b/Lecture_01/lecture_note/note_01.tex
@@ -214,12 +214,19 @@
 \begin{frame}
 	\frametitle{Example of Agro-Informatics}
 	\begin{figure}
-		\includegraphics[width=0.8\linewidth]{creodocs_logo.pdf}
-		\caption{Creodocs logo.}
+		\includegraphics[width=0.8\linewidth]{images/figure1.png}
+		\label{fig:https://doa.gov.lk/ict-solutions/}
 	\end{figure}
 \end{frame}
 
-
+% Slide 5
+\begin{frame}
+	\frametitle{Example of Agro-Informatics}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure2.png}
+		\label{fig:https://www.vervetronics.com/solutions/iot-smart-agriculture/precision-agriculture/}
+	\end{figure}
+\end{frame}
 
 %----------------------------------------------------------------------------------------
 %	PRESENTATION BODY SLIDES
