--- a/Lecture_01/lecture_note/note_01.tex
+++ b/Lecture_01/lecture_note/note_01.tex
@@ -228,6 +228,15 @@
 	\end{figure}
 \end{frame}
 
+% Slide 6
+\begin{frame}
+	\frametitle{Example of Agro-Informatics}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure3.png}
+		\label{fig:https://www.sisinternational.com/expertise/industries/biotechnology-market-research/}
+	\end{figure}
+\end{frame}
+
 %----------------------------------------------------------------------------------------
 %	PRESENTATION BODY SLIDES
 %----------------------------------------------------------------------------------------
