--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -232,11 +232,10 @@
 \begin{frame}
 	\frametitle{Example of Agro-Informatics}
 	\begin{figure}
-		\includegraphics[width=0.8\linewidth]{images/figure3.png}
-		\label{fig:https://www.sisinternational.com/expertise/industries/biotechnology-market-research/}
+		\includegraphics[width=0.8\linewidth]{images/figure3.jpg}
+		\label{fig:https://www.linkedin.com/pulse/smart-farming-data-science-sanket-dayama}
 	\end{figure}
 \end{frame}
-
 %----------------------------------------------------------------------------------------
 %	PRESENTATION BODY SLIDES
 %----------------------------------------------------------------------------------------
