slide for database

--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -239,12 +239,32 @@
 
 % Slide 7
 \begin{frame}
-	\frametitle{Information & Technology}
-
-
+	\frametitle{In this class,}
+		\begin{itemize}
+			\item We will combine agricultural economics and computer science.
+			\item We will learn about how to collect, store, and analyze a variety of data used in agriculutural econmics.
+		\end{itemize}
 \end{frame}
 
+% Slide 8
+\begin{frame}
+	\frametitle{Data Collect}
+		\begin{itemize}
+			\item A variety of sources of data and information related to agriculutral economics
+			\item KOSIS (Statistics Korea, Bank of Korea, Government Agencies, etc)
+			\item International Agricultural Data (World Bank, FAO, etc)
+		\end{itemize}
+\end{frame}
 
+% Slide 9
+\begin{frame}
+	\frametitle{Data Store}
+		\begin{itemize}
+			\item Database Management System (DBMS, e.g., MS ACESS)
+			\item Enterprise Resource Planning (ERP)
+			\item Structured Query Language (SQL)
+		\end{itemize}
+\end{frame}
 
-
+%----------------------------------------------------------------------------------------
 \end{document} 
