--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -251,12 +251,59 @@
 	\frametitle{Data Collect}
 		\begin{itemize}
 			\item A variety of sources of data and information related to agriculutral economics
-			\item KOSIS (Statistics Korea, Bank of Korea, Government Agencies, etc)
+			\item Statistics Korea, Bank of Korea, Government Agencies, AGRIX, etc
 			\item International Agricultural Data (World Bank, FAO, etc)
 		\end{itemize}
 \end{frame}
 
 % Slide 9
+\begin{frame}
+	\frametitle{Data Collect}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure4.png}
+		\label{fig}
+	\end{figure}
+\end{frame}
+
+
+% Slide 10
+\begin{frame}
+	\frametitle{Data Collect}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure5.png}
+		\label{fig}
+	\end{figure}
+\end{frame}
+
+
+% Slide 11
+\begin{frame}
+	\frametitle{Data Collect}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure6.png}
+		\label{fig}
+	\end{figure}
+\end{frame}
+
+% Slide 12
+\begin{frame}
+	\frametitle{Data Collect}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure7.png}
+		\label{fig}
+	\end{figure}
+\end{frame}
+
+% Slide 13
+\begin{frame}
+	\frametitle{Data Collect}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure8.png}
+		\label{fig}
+	\end{figure}
+\end{frame}
+
+% Slide 
 \begin{frame}
 	\frametitle{Data Store}
 		\begin{itemize}
