--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -258,7 +258,7 @@
 
 % Slide 9
 \begin{frame}
-	\frametitle{Data Collect}
+	\frametitle{KOSIS}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure4.png}
 		\label{fig}
@@ -268,7 +268,7 @@
 
 % Slide 10
 \begin{frame}
-	\frametitle{Data Collect}
+	\frametitle{KOSIS}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure5.png}
 		\label{fig}
@@ -278,7 +278,7 @@
 
 % Slide 11
 \begin{frame}
-	\frametitle{Data Collect}
+	\frametitle{AGRIX}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure6.png}
 		\label{fig}
@@ -287,7 +287,7 @@
 
 % Slide 12
 \begin{frame}
-	\frametitle{Data Collect}
+	\frametitle{World Bank Open Data}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure7.png}
 		\label{fig}
@@ -296,14 +296,14 @@
 
 % Slide 13
 \begin{frame}
-	\frametitle{Data Collect}
+	\frametitle{FAOSTAT}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure8.png}
 		\label{fig}
 	\end{figure}
 \end{frame}
 
-% Slide 
+% Slide 14
 \begin{frame}
 	\frametitle{Data Store}
 		\begin{itemize}
@@ -311,6 +311,36 @@
 			\item Enterprise Resource Planning (ERP)
 			\item Structured Query Language (SQL)
 		\end{itemize}
+\end{frame}
+
+% Slide 14
+\begin{frame}
+	\frametitle{DBMS}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure9.png}
+		\label{fig: Kaloxylos et al. 2012}
+	\end{figure}
+\end{frame}
+
+% Slide 15
+\begin{frame}
+	\frametitle{DBMS}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure10.png}
+		\label{fig: Kaloxylos et al. 2012}
+	\end{figure}
+\end{frame}
+
+% Slide 15
+\begin{frame}
+	\frametitle{ERP}
+
+\end{frame}
+
+% Slide 16
+\begin{frame}
+	\frametitle{SQL}
+
 \end{frame}
 
 %----------------------------------------------------------------------------------------
