--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -171,8 +171,6 @@
 % The table of contents outputs the sections and subsections that appear in your presentation, specified with the standard \section and \subsection commands. You may either display all sections and subsections on one slide with \tableofcontents, or display each section at a time on subsequent slides with \tableofcontents[pausesections]. The latter is useful if you want to step through each section and mention what you will discuss.
 
 % Slide 1
-\subsection{Blocks}
-
 \begin{frame}
 	\frametitle{Agro-Informatics}
 	
@@ -186,7 +184,7 @@
 		 Geographic Information Systems (GIS) \\ 
 	\end{exampleblock}
 	
-	\begin{block}{} % Block without title
+	\begin{block}{Information and Technology in Agriculture}
 		Information and Technology enable the transformation of data into actionable information.
 	\end{block}
 \end{frame}
@@ -334,13 +332,38 @@
 % Slide 15
 \begin{frame}
 	\frametitle{ERP}
-
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure11.png}
+		\label{fig:https://www.finereport.com}
+	\end{figure}
 \end{frame}
 
 % Slide 16
 \begin{frame}
 	\frametitle{SQL}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure12.png}
+		\label{fig:https://miny-genie.tistory.com/262}
+	\end{figure}
+\end{frame}
 
+% Slide 17
+\begin{frame}
+	\frametitle{Data Analysis}
+		\begin{itemize}
+			\item Data: Raw, unorganized (unprocessed) facts that need context to become useful
+			\item Information: Processed, organized, interpreted and analyzed data used for specific purposes (e.g., descision-making) by adding meaning and value
+			\item Data is used for information, which is also can be used for other information.
+		\end{itemize}
+\end{frame}
+
+% Slide 18
+\begin{frame}
+	\frametitle{Data Becomes Information}
+	\begin{figure}
+		\includegraphics[width=0.8\linewidth]{images/figure13.png}
+		\label{fig:}
+	\end{figure}
 \end{frame}
 
 %----------------------------------------------------------------------------------------
