data vs information details

--- a/Lecture_01/lecture_note/lecture_01.tex
+++ b/Lecture_01/lecture_note/lecture_01.tex
@@ -171,6 +171,7 @@
 % The table of contents outputs the sections and subsections that appear in your presentation, specified with the standard \section and \subsection commands. You may either display all sections and subsections on one slide with \tableofcontents, or display each section at a time on subsequent slides with \tableofcontents[pausesections]. The latter is useful if you want to step through each section and mention what you will discuss.
 
 % Slide 1
+\subsection{Introduction}
 \begin{frame}
 	\frametitle{Agro-Informatics}
 	
@@ -316,7 +317,7 @@
 	\frametitle{DBMS}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure9.png}
-		\label{fig: Kaloxylos et al. 2012}
+		\label{fig:Kaloxylos et al. 2012}
 	\end{figure}
 \end{frame}
 
@@ -325,7 +326,7 @@
 	\frametitle{DBMS}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure10.png}
-		\label{fig: Kaloxylos et al. 2012}
+		\label{fig:Kaloxylos et al. 2012}
 	\end{figure}
 \end{frame}
 
@@ -359,12 +360,39 @@
 
 % Slide 18
 \begin{frame}
-	\frametitle{Data Becomes Information}
+	\frametitle{Details: Data}
+		\begin{itemize}
+			\item A collection of facts or statistics
+			\item Unorganized
+			\item Without context
+			\item Can be quantitative (descriptive)
+			\item Examples: Number of Farmers in South Korea, Agricultural Income per Farm Household, Rice prices, etc
+		\end{itemize}
+\end{frame}
+
+\begin{frame}
+	\frametitle{Details: Information}
+		\begin{itemize}
+			\item The result of analyzing and interpreting data
+			\item Has context
+			\item Can be used to help make decisions
+			\item Examples: An increase in rice prices compared to previous year, Average agricultural income in Jeonnam and Jeonbuk with a comparision, etc
+		\end{itemize}
+\end{frame}
+
+% Slide 19
+\begin{frame}
+	\frametitle{Data Analysis}
 	\begin{figure}
 		\includegraphics[width=0.8\linewidth]{images/figure13.png}
-		\label{fig:}
+		\label{fig:https://bloomfire.com/}
 	\end{figure}
 \end{frame}
+
+
+
+
+
 
 %----------------------------------------------------------------------------------------
 \end{document} 
